# goal-tracker-backend

./: .gitignore  README.md  manage.py  pyproject.toml
goal_tracker_backend/: asgi.py  urls.py  wsgi.py
goal_tracker_backend/settings/: base.py  development.py
goals/: models.py
goals/migrations/: 0001_initial.py  0002_initial.py
users/: models.py
users/migrations/: 0001_initial.py
