[tool.poetry]
name = "goal-tracker-backend"
version = "0.1.0"
description = "Backend for Goal Tracker application"
authors = ["HibbanHaroon <hibbanharoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.1.3"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.3.0"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
